# galaxia

./: COPYRIGHT  Makefile.am  Makefile.in  README.rst  README_original  configure  configure.ac  example_galaxiaParams.txt
docs/: example_galaxiaParams.txt  example_galaxyModelParams.txt  galaxyModelParams_PopSyCLEv1.txt  galaxyModelParams_PopSyCLEv2.txt  galaxyModelParams_PopSyCLEv3.txt
src/: BHTree.cpp  BHTree.h  CompatibilityChecks.h  Cot.cpp  Cot.h  Functions.cpp  Functions.h  GInterpolator.cpp  GInterpolator.h  Galaxia.cpp  GalaxyModel.cpp  GalaxyModel.h  GalaxyParameters.cpp  GalaxyParameters.h  Geometry.cpp  Geometry.h  Interp.cpp  Interp.h  Isochrone.cpp  Isochrone.h  IsochroneBase.cpp  IsochroneBase.h  IsochroneDB.cpp  IsochroneDB.h  Makefile.am  Makefile.in  Matrix.h  Parameters.cpp  Parameters.h  Population.cpp  Population.h  Sampler.cpp  Sampler.h  Satellite.cpp  Satellite.h  StarParticle.h  StellarPopulation.cpp  StellarPopulation.h  SurveyDesign.cpp  SurveyDesign.h  (+13 more)
